HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiArgRegionLocalRawPtr/Expected.uv
//! Expected diagnostic metadata for the FfiArgRegionLocalRawPtr rejected-source specimen.

expectedDiagnostic("E-SYS-3360", "rule.23.FFI-Arg-RegionLocalRawPtr-Err")
